--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         fetch-depth: 2
     - name: FTP-Deploy-Actioon
-      uses: SamKirland/FTP-Deploy-Action@3.1.1
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         ftp-server: ftp.chancimi.com
         ftp-username: c2093974c
